@@ -5,6 +5,8 @@ Wed Aug  1 17:21:57 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>
 	* src/org/jcae/mesh/bora/ds/Hypothesis.java (combine): This method now
 	returns a boolean telling if constraints have been successfully
 	combined.
+	* src/org/jcae/mesh/xmldata/MeshExporter.java: Do not abort if the <normals>
+	node is not present in jcae3d.
 
 Thu Jul 26 02:19:57 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>
 
